--- a/Titanic/Catboost_Titanic.ipynb
+++ b/Titanic/Catboost_Titanic.ipynb
@@ -598,6 +598,7 @@
    "source": [
     "file = pd.DataFrame(result)\n",
     "file.to_csv('submission.csv', index=False, header=False)"
+    "#Solution with Catboost is top 10%"
    ]
   },
   {
